pvi/modules/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> progv
Rule 1     progv -> element progv
Rule 2     progv -> <empty>
Rule 3     element -> FUNCTION IDENTIFIER LPAREN optparams RPAREN compoundstmt
Rule 4     element -> sstmt
Rule 5     optparams -> params
Rule 6     optparams -> <empty>
Rule 7     params -> IDENTIFIER COMMA params
Rule 8     params -> IDENTIFIER
Rule 9     compoundstmt -> LBRACE stmts RBRACE
Rule 10    stmts -> sstmt stmts
Rule 11    stmt_or_compound -> sstmt
Rule 12    stmt_or_compound -> compoundstmt
Rule 13    optsemi -> <empty>
Rule 14    optsemi -> SEMICOLON
Rule 15    stmts -> <empty>
Rule 16    sstmt -> BREAK
Rule 17    sstmt -> CONTINUE
Rule 18    sstmt -> IF exp stmt_or_compound optsemi
Rule 19    sstmt -> WHILE exp stmt_or_compound optsemi
Rule 20    sstmt -> DO compoundstmt WHILE exp optsemi
Rule 21    sstmt -> IF exp compoundstmt ELSE stmt_or_compound optsemi
Rule 22    sstmt -> IDENTIFIER EQUAL exp optsemi
Rule 23    sstmt -> RETURN exp optsemi
Rule 24    sstmt -> VAR IDENTIFIER EQUAL exp optsemi
Rule 25    sstmt -> exp optsemi
Rule 26    assign_or_var -> IDENTIFIER EQUAL exp
Rule 27    assign_or_var -> VAR IDENTIFIER EQUAL exp
Rule 28    assign_or_stmt -> sstmt
Rule 29    assign_or_stmt -> IDENTIFIER EQUAL exp
Rule 30    assign_or_var -> <empty>
Rule 31    sstmt -> FOR LPAREN assign_or_var SEMICOLON exp SEMICOLON assign_or_stmt RPAREN stmt_or_compound optsemi
Rule 32    exp -> IDENTIFIER
Rule 33    exp -> FLOAT
Rule 34    exp -> INT
Rule 35    exp -> STRING
Rule 36    exp -> TRUE
Rule 37    exp -> FALSE
Rule 38    exp -> LOGICAL_NOT exp
Rule 39    exp -> LPAREN exp RPAREN
Rule 40    exp -> FUNCTION LPAREN optparams RPAREN compoundstmt
Rule 41    exp -> exp LOGICAL_OR exp
Rule 42    exp -> exp LOGICAL_AND exp
Rule 43    exp -> exp LOGICAL_EQUAL exp
Rule 44    exp -> exp LOGICAL_DIFF exp
Rule 45    exp -> exp LT exp
Rule 46    exp -> exp GT exp
Rule 47    exp -> exp LE exp
Rule 48    exp -> exp GE exp
Rule 49    exp -> exp PLUS exp
Rule 50    exp -> exp MINUS exp
Rule 51    exp -> exp TIMES exp
Rule 52    exp -> exp DIVIDE exp
Rule 53    exp -> exp POWER exp
Rule 54    exp -> exp MOD exp
Rule 55    exp -> IDENTIFIER LPAREN optargs RPAREN
Rule 56    optargs -> args
Rule 57    optargs -> <empty>
Rule 58    args -> exp COMMA args
Rule 59    args -> exp
Rule 60    exp -> LBRACKET optargs RBRACKET
Rule 61    exp -> IDENTIFIER LBRACKET exp RBRACKET
Rule 62    exp -> LBRACKET optargs RBRACKET LBRACKET exp RBRACKET

Terminals, with rules where they appear

BREAK                : 16
COMMA                : 7 58
CONTINUE             : 17
DIVIDE               : 52
DO                   : 20
ELSE                 : 21
EQUAL                : 22 24 26 27 29
FALSE                : 37
FLOAT                : 33
FOR                  : 31
FUNCTION             : 3 40
GE                   : 48
GT                   : 46
IDENTIFIER           : 3 7 8 22 24 26 27 29 32 55 61
IF                   : 18 21
INT                  : 34
LBRACE               : 9
LBRACKET             : 60 61 62 62
LE                   : 47
LOGICAL_AND          : 42
LOGICAL_DIFF         : 44
LOGICAL_EQUAL        : 43
LOGICAL_NOT          : 38
LOGICAL_OR           : 41
LPAREN               : 3 31 39 40 55
LT                   : 45
MINUS                : 50
MOD                  : 54
PLUS                 : 49
POWER                : 53
RBRACE               : 9
RBRACKET             : 60 61 62 62
RETURN               : 23
RPAREN               : 3 31 39 40 55
SEMICOLON            : 14 31 31
STRING               : 35
TIMES                : 51
TRUE                 : 36
VAR                  : 24 27
WHILE                : 19 20
error                : 

Nonterminals, with rules where they appear

args                 : 56 58
assign_or_stmt       : 31
assign_or_var        : 31
compoundstmt         : 3 12 20 21 40
element              : 1
exp                  : 18 19 20 21 22 23 24 25 26 27 29 31 38 39 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 58 59 61 62
optargs              : 55 60 62
optparams            : 3 40
optsemi              : 18 19 20 21 22 23 24 25 31
params               : 5 7
progv                : 1 0
sstmt                : 4 10 11 28
stmt_or_compound     : 18 19 21 31
stmts                : 9 10

Parsing method: LALR

state 0

    (0) S' -> . progv
    (1) progv -> . element progv
    (2) progv -> .
    (3) element -> . FUNCTION IDENTIFIER LPAREN optparams RPAREN compoundstmt
    (4) element -> . sstmt
    (16) sstmt -> . BREAK
    (17) sstmt -> . CONTINUE
    (18) sstmt -> . IF exp stmt_or_compound optsemi
    (19) sstmt -> . WHILE exp stmt_or_compound optsemi
    (20) sstmt -> . DO compoundstmt WHILE exp optsemi
    (21) sstmt -> . IF exp compoundstmt ELSE stmt_or_compound optsemi
    (22) sstmt -> . IDENTIFIER EQUAL exp optsemi
    (23) sstmt -> . RETURN exp optsemi
    (24) sstmt -> . VAR IDENTIFIER EQUAL exp optsemi
    (25) sstmt -> . exp optsemi
    (31) sstmt -> . FOR LPAREN assign_or_var SEMICOLON exp SEMICOLON assign_or_stmt RPAREN stmt_or_compound optsemi
    (32) exp -> . IDENTIFIER
    (33) exp -> . FLOAT
    (34) exp -> . INT
    (35) exp -> . STRING
    (36) exp -> . TRUE
    (37) exp -> . FALSE
    (38) exp -> . LOGICAL_NOT exp
    (39) exp -> . LPAREN exp RPAREN
    (40) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (41) exp -> . exp LOGICAL_OR exp
    (42) exp -> . exp LOGICAL_AND exp
    (43) exp -> . exp LOGICAL_EQUAL exp
    (44) exp -> . exp LOGICAL_DIFF exp
    (45) exp -> . exp LT exp
    (46) exp -> . exp GT exp
    (47) exp -> . exp LE exp
    (48) exp -> . exp GE exp
    (49) exp -> . exp PLUS exp
    (50) exp -> . exp MINUS exp
    (51) exp -> . exp TIMES exp
    (52) exp -> . exp DIVIDE exp
    (53) exp -> . exp POWER exp
    (54) exp -> . exp MOD exp
    (55) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (60) exp -> . LBRACKET optargs RBRACKET
    (61) exp -> . IDENTIFIER LBRACKET exp RBRACKET
    (62) exp -> . LBRACKET optargs RBRACKET LBRACKET exp RBRACKET

    $end            reduce using rule 2 (progv -> .)
    FUNCTION        shift and go to state 8
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    IF              shift and go to state 15
    WHILE           shift and go to state 4
    DO              shift and go to state 1
    IDENTIFIER      shift and go to state 7
    RETURN          shift and go to state 2
    VAR             shift and go to state 13
    FOR             shift and go to state 10
    FLOAT           shift and go to state 18
    INT             shift and go to state 17
    STRING          shift and go to state 9
    TRUE            shift and go to state 5
    FALSE           shift and go to state 16
    LOGICAL_NOT     shift and go to state 14
    LPAREN          shift and go to state 12
    LBRACKET        shift and go to state 3

    progv                          shift and go to state 11
    sstmt                          shift and go to state 6
    element                        shift and go to state 19
    exp                            shift and go to state 22

state 1

    (20) sstmt -> DO . compoundstmt WHILE exp optsemi
    (9) compoundstmt -> . LBRACE stmts RBRACE

    LBRACE          shift and go to state 23

    compoundstmt                   shift and go to state 24

state 2

    (23) sstmt -> RETURN . exp optsemi
    (32) exp -> . IDENTIFIER
    (33) exp -> . FLOAT
    (34) exp -> . INT
    (35) exp -> . STRING
    (36) exp -> . TRUE
    (37) exp -> . FALSE
    (38) exp -> . LOGICAL_NOT exp
    (39) exp -> . LPAREN exp RPAREN
    (40) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (41) exp -> . exp LOGICAL_OR exp
    (42) exp -> . exp LOGICAL_AND exp
    (43) exp -> . exp LOGICAL_EQUAL exp
    (44) exp -> . exp LOGICAL_DIFF exp
    (45) exp -> . exp LT exp
    (46) exp -> . exp GT exp
    (47) exp -> . exp LE exp
    (48) exp -> . exp GE exp
    (49) exp -> . exp PLUS exp
    (50) exp -> . exp MINUS exp
    (51) exp -> . exp TIMES exp
    (52) exp -> . exp DIVIDE exp
    (53) exp -> . exp POWER exp
    (54) exp -> . exp MOD exp
    (55) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (60) exp -> . LBRACKET optargs RBRACKET
    (61) exp -> . IDENTIFIER LBRACKET exp RBRACKET
    (62) exp -> . LBRACKET optargs RBRACKET LBRACKET exp RBRACKET

    IDENTIFIER      shift and go to state 25
    FLOAT           shift and go to state 18
    INT             shift and go to state 17
    STRING          shift and go to state 9
    TRUE            shift and go to state 5
    FALSE           shift and go to state 16
    LOGICAL_NOT     shift and go to state 14
    LPAREN          shift and go to state 12
    FUNCTION        shift and go to state 26
    LBRACKET        shift and go to state 3

    exp                            shift and go to state 27

state 3

    (60) exp -> LBRACKET . optargs RBRACKET
    (62) exp -> LBRACKET . optargs RBRACKET LBRACKET exp RBRACKET
    (56) optargs -> . args
    (57) optargs -> .
    (58) args -> . exp COMMA args
    (59) args -> . exp
    (32) exp -> . IDENTIFIER
    (33) exp -> . FLOAT
    (34) exp -> . INT
    (35) exp -> . STRING
    (36) exp -> . TRUE
    (37) exp -> . FALSE
    (38) exp -> . LOGICAL_NOT exp
    (39) exp -> . LPAREN exp RPAREN
    (40) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (41) exp -> . exp LOGICAL_OR exp
    (42) exp -> . exp LOGICAL_AND exp
    (43) exp -> . exp LOGICAL_EQUAL exp
    (44) exp -> . exp LOGICAL_DIFF exp
    (45) exp -> . exp LT exp
    (46) exp -> . exp GT exp
    (47) exp -> . exp LE exp
    (48) exp -> . exp GE exp
    (49) exp -> . exp PLUS exp
    (50) exp -> . exp MINUS exp
    (51) exp -> . exp TIMES exp
    (52) exp -> . exp DIVIDE exp
    (53) exp -> . exp POWER exp
    (54) exp -> . exp MOD exp
    (55) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (60) exp -> . LBRACKET optargs RBRACKET
    (61) exp -> . IDENTIFIER LBRACKET exp RBRACKET
    (62) exp -> . LBRACKET optargs RBRACKET LBRACKET exp RBRACKET

    RBRACKET        reduce using rule 57 (optargs -> .)
    IDENTIFIER      shift and go to state 25
    FLOAT           shift and go to state 18
    INT             shift and go to state 17
    STRING          shift and go to state 9
    TRUE            shift and go to state 5
    FALSE           shift and go to state 16
    LOGICAL_NOT     shift and go to state 14
    LPAREN          shift and go to state 12
    FUNCTION        shift and go to state 26
    LBRACKET        shift and go to state 3

    args                           shift and go to state 29
    exp                            shift and go to state 30
    optargs                        shift and go to state 28

state 4

    (19) sstmt -> WHILE . exp stmt_or_compound optsemi
    (32) exp -> . IDENTIFIER
    (33) exp -> . FLOAT
    (34) exp -> . INT
    (35) exp -> . STRING
    (36) exp -> . TRUE
    (37) exp -> . FALSE
    (38) exp -> . LOGICAL_NOT exp
    (39) exp -> . LPAREN exp RPAREN
    (40) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (41) exp -> . exp LOGICAL_OR exp
    (42) exp -> . exp LOGICAL_AND exp
    (43) exp -> . exp LOGICAL_EQUAL exp
    (44) exp -> . exp LOGICAL_DIFF exp
    (45) exp -> . exp LT exp
    (46) exp -> . exp GT exp
    (47) exp -> . exp LE exp
    (48) exp -> . exp GE exp
    (49) exp -> . exp PLUS exp
    (50) exp -> . exp MINUS exp
    (51) exp -> . exp TIMES exp
    (52) exp -> . exp DIVIDE exp
    (53) exp -> . exp POWER exp
    (54) exp -> . exp MOD exp
    (55) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (60) exp -> . LBRACKET optargs RBRACKET
    (61) exp -> . IDENTIFIER LBRACKET exp RBRACKET
    (62) exp -> . LBRACKET optargs RBRACKET LBRACKET exp RBRACKET

    IDENTIFIER      shift and go to state 25
    FLOAT           shift and go to state 18
    INT             shift and go to state 17
    STRING          shift and go to state 9
    TRUE            shift and go to state 5
    FALSE           shift and go to state 16
    LOGICAL_NOT     shift and go to state 14
    LPAREN          shift and go to state 12
    FUNCTION        shift and go to state 26
    LBRACKET        shift and go to state 3

    exp                            shift and go to state 31

state 5

    (36) exp -> TRUE .

    LOGICAL_OR      reduce using rule 36 (exp -> TRUE .)
    LOGICAL_AND     reduce using rule 36 (exp -> TRUE .)
    LOGICAL_EQUAL   reduce using rule 36 (exp -> TRUE .)
    LOGICAL_DIFF    reduce using rule 36 (exp -> TRUE .)
    LT              reduce using rule 36 (exp -> TRUE .)
    GT              reduce using rule 36 (exp -> TRUE .)
    LE              reduce using rule 36 (exp -> TRUE .)
    GE              reduce using rule 36 (exp -> TRUE .)
    PLUS            reduce using rule 36 (exp -> TRUE .)
    MINUS           reduce using rule 36 (exp -> TRUE .)
    TIMES           reduce using rule 36 (exp -> TRUE .)
    DIVIDE          reduce using rule 36 (exp -> TRUE .)
    POWER           reduce using rule 36 (exp -> TRUE .)
    MOD             reduce using rule 36 (exp -> TRUE .)
    SEMICOLON       reduce using rule 36 (exp -> TRUE .)
    FUNCTION        reduce using rule 36 (exp -> TRUE .)
    BREAK           reduce using rule 36 (exp -> TRUE .)
    CONTINUE        reduce using rule 36 (exp -> TRUE .)
    IF              reduce using rule 36 (exp -> TRUE .)
    WHILE           reduce using rule 36 (exp -> TRUE .)
    DO              reduce using rule 36 (exp -> TRUE .)
    IDENTIFIER      reduce using rule 36 (exp -> TRUE .)
    RETURN          reduce using rule 36 (exp -> TRUE .)
    VAR             reduce using rule 36 (exp -> TRUE .)
    FOR             reduce using rule 36 (exp -> TRUE .)
    FLOAT           reduce using rule 36 (exp -> TRUE .)
    INT             reduce using rule 36 (exp -> TRUE .)
    STRING          reduce using rule 36 (exp -> TRUE .)
    TRUE            reduce using rule 36 (exp -> TRUE .)
    FALSE           reduce using rule 36 (exp -> TRUE .)
    LOGICAL_NOT     reduce using rule 36 (exp -> TRUE .)
    LPAREN          reduce using rule 36 (exp -> TRUE .)
    LBRACKET        reduce using rule 36 (exp -> TRUE .)
    $end            reduce using rule 36 (exp -> TRUE .)
    RBRACE          reduce using rule 36 (exp -> TRUE .)
    RPAREN          reduce using rule 36 (exp -> TRUE .)
    COMMA           reduce using rule 36 (exp -> TRUE .)
    RBRACKET        reduce using rule 36 (exp -> TRUE .)
    LBRACE          reduce using rule 36 (exp -> TRUE .)


state 6

    (4) element -> sstmt .

    FUNCTION        reduce using rule 4 (element -> sstmt .)
    BREAK           reduce using rule 4 (element -> sstmt .)
    CONTINUE        reduce using rule 4 (element -> sstmt .)
    IF              reduce using rule 4 (element -> sstmt .)
    WHILE           reduce using rule 4 (element -> sstmt .)
    DO              reduce using rule 4 (element -> sstmt .)
    IDENTIFIER      reduce using rule 4 (element -> sstmt .)
    RETURN          reduce using rule 4 (element -> sstmt .)
    VAR             reduce using rule 4 (element -> sstmt .)
    FOR             reduce using rule 4 (element -> sstmt .)
    FLOAT           reduce using rule 4 (element -> sstmt .)
    INT             reduce using rule 4 (element -> sstmt .)
    STRING          reduce using rule 4 (element -> sstmt .)
    TRUE            reduce using rule 4 (element -> sstmt .)
    FALSE           reduce using rule 4 (element -> sstmt .)
    LOGICAL_NOT     reduce using rule 4 (element -> sstmt .)
    LPAREN          reduce using rule 4 (element -> sstmt .)
    LBRACKET        reduce using rule 4 (element -> sstmt .)
    $end            reduce using rule 4 (element -> sstmt .)


state 7

    (22) sstmt -> IDENTIFIER . EQUAL exp optsemi
    (32) exp -> IDENTIFIER .
    (55) exp -> IDENTIFIER . LPAREN optargs RPAREN
    (61) exp -> IDENTIFIER . LBRACKET exp RBRACKET

  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
    EQUAL           shift and go to state 32
    LOGICAL_OR      reduce using rule 32 (exp -> IDENTIFIER .)
    LOGICAL_AND     reduce using rule 32 (exp -> IDENTIFIER .)
    LOGICAL_EQUAL   reduce using rule 32 (exp -> IDENTIFIER .)
    LOGICAL_DIFF    reduce using rule 32 (exp -> IDENTIFIER .)
    LT              reduce using rule 32 (exp -> IDENTIFIER .)
    GT              reduce using rule 32 (exp -> IDENTIFIER .)
    LE              reduce using rule 32 (exp -> IDENTIFIER .)
    GE              reduce using rule 32 (exp -> IDENTIFIER .)
    PLUS            reduce using rule 32 (exp -> IDENTIFIER .)
    MINUS           reduce using rule 32 (exp -> IDENTIFIER .)
    TIMES           reduce using rule 32 (exp -> IDENTIFIER .)
    DIVIDE          reduce using rule 32 (exp -> IDENTIFIER .)
    POWER           reduce using rule 32 (exp -> IDENTIFIER .)
    MOD             reduce using rule 32 (exp -> IDENTIFIER .)
    SEMICOLON       reduce using rule 32 (exp -> IDENTIFIER .)
    FUNCTION        reduce using rule 32 (exp -> IDENTIFIER .)
    BREAK           reduce using rule 32 (exp -> IDENTIFIER .)
    CONTINUE        reduce using rule 32 (exp -> IDENTIFIER .)
    IF              reduce using rule 32 (exp -> IDENTIFIER .)
    WHILE           reduce using rule 32 (exp -> IDENTIFIER .)
    DO              reduce using rule 32 (exp -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 32 (exp -> IDENTIFIER .)
    RETURN          reduce using rule 32 (exp -> IDENTIFIER .)
    VAR             reduce using rule 32 (exp -> IDENTIFIER .)
    FOR             reduce using rule 32 (exp -> IDENTIFIER .)
    FLOAT           reduce using rule 32 (exp -> IDENTIFIER .)
    INT             reduce using rule 32 (exp -> IDENTIFIER .)
    STRING          reduce using rule 32 (exp -> IDENTIFIER .)
    TRUE            reduce using rule 32 (exp -> IDENTIFIER .)
    FALSE           reduce using rule 32 (exp -> IDENTIFIER .)
    LOGICAL_NOT     reduce using rule 32 (exp -> IDENTIFIER .)
    $end            reduce using rule 32 (exp -> IDENTIFIER .)
    RBRACE          reduce using rule 32 (exp -> IDENTIFIER .)
    RPAREN          reduce using rule 32 (exp -> IDENTIFIER .)
    LPAREN          shift and go to state 34
    LBRACKET        shift and go to state 33

  ! LPAREN          [ reduce using rule 32 (exp -> IDENTIFIER .) ]
  ! LBRACKET        [ reduce using rule 32 (exp -> IDENTIFIER .) ]


state 8

    (3) element -> FUNCTION . IDENTIFIER LPAREN optparams RPAREN compoundstmt
    (40) exp -> FUNCTION . LPAREN optparams RPAREN compoundstmt

    IDENTIFIER      shift and go to state 36
    LPAREN          shift and go to state 35


state 9

    (35) exp -> STRING .

    LOGICAL_OR      reduce using rule 35 (exp -> STRING .)
    LOGICAL_AND     reduce using rule 35 (exp -> STRING .)
    LOGICAL_EQUAL   reduce using rule 35 (exp -> STRING .)
    LOGICAL_DIFF    reduce using rule 35 (exp -> STRING .)
    LT              reduce using rule 35 (exp -> STRING .)
    GT              reduce using rule 35 (exp -> STRING .)
    LE              reduce using rule 35 (exp -> STRING .)
    GE              reduce using rule 35 (exp -> STRING .)
    PLUS            reduce using rule 35 (exp -> STRING .)
    MINUS           reduce using rule 35 (exp -> STRING .)
    TIMES           reduce using rule 35 (exp -> STRING .)
    DIVIDE          reduce using rule 35 (exp -> STRING .)
    POWER           reduce using rule 35 (exp -> STRING .)
    MOD             reduce using rule 35 (exp -> STRING .)
    SEMICOLON       reduce using rule 35 (exp -> STRING .)
    FUNCTION        reduce using rule 35 (exp -> STRING .)
    BREAK           reduce using rule 35 (exp -> STRING .)
    CONTINUE        reduce using rule 35 (exp -> STRING .)
    IF              reduce using rule 35 (exp -> STRING .)
    WHILE           reduce using rule 35 (exp -> STRING .)
    DO              reduce using rule 35 (exp -> STRING .)
    IDENTIFIER      reduce using rule 35 (exp -> STRING .)
    RETURN          reduce using rule 35 (exp -> STRING .)
    VAR             reduce using rule 35 (exp -> STRING .)
    FOR             reduce using rule 35 (exp -> STRING .)
    FLOAT           reduce using rule 35 (exp -> STRING .)
    INT             reduce using rule 35 (exp -> STRING .)
    STRING          reduce using rule 35 (exp -> STRING .)
    TRUE            reduce using rule 35 (exp -> STRING .)
    FALSE           reduce using rule 35 (exp -> STRING .)
    LOGICAL_NOT     reduce using rule 35 (exp -> STRING .)
    LPAREN          reduce using rule 35 (exp -> STRING .)
    LBRACKET        reduce using rule 35 (exp -> STRING .)
    $end            reduce using rule 35 (exp -> STRING .)
    RBRACE          reduce using rule 35 (exp -> STRING .)
    RPAREN          reduce using rule 35 (exp -> STRING .)
    COMMA           reduce using rule 35 (exp -> STRING .)
    RBRACKET        reduce using rule 35 (exp -> STRING .)
    LBRACE          reduce using rule 35 (exp -> STRING .)


state 10

    (31) sstmt -> FOR . LPAREN assign_or_var SEMICOLON exp SEMICOLON assign_or_stmt RPAREN stmt_or_compound optsemi

    LPAREN          shift and go to state 37


state 11

    (0) S' -> progv .



state 12

    (39) exp -> LPAREN . exp RPAREN
    (32) exp -> . IDENTIFIER
    (33) exp -> . FLOAT
    (34) exp -> . INT
    (35) exp -> . STRING
    (36) exp -> . TRUE
    (37) exp -> . FALSE
    (38) exp -> . LOGICAL_NOT exp
    (39) exp -> . LPAREN exp RPAREN
    (40) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (41) exp -> . exp LOGICAL_OR exp
    (42) exp -> . exp LOGICAL_AND exp
    (43) exp -> . exp LOGICAL_EQUAL exp
    (44) exp -> . exp LOGICAL_DIFF exp
    (45) exp -> . exp LT exp
    (46) exp -> . exp GT exp
    (47) exp -> . exp LE exp
    (48) exp -> . exp GE exp
    (49) exp -> . exp PLUS exp
    (50) exp -> . exp MINUS exp
    (51) exp -> . exp TIMES exp
    (52) exp -> . exp DIVIDE exp
    (53) exp -> . exp POWER exp
    (54) exp -> . exp MOD exp
    (55) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (60) exp -> . LBRACKET optargs RBRACKET
    (61) exp -> . IDENTIFIER LBRACKET exp RBRACKET
    (62) exp -> . LBRACKET optargs RBRACKET LBRACKET exp RBRACKET

    IDENTIFIER      shift and go to state 25
    FLOAT           shift and go to state 18
    INT             shift and go to state 17
    STRING          shift and go to state 9
    TRUE            shift and go to state 5
    FALSE           shift and go to state 16
    LOGICAL_NOT     shift and go to state 14
    LPAREN          shift and go to state 12
    FUNCTION        shift and go to state 26
    LBRACKET        shift and go to state 3

    exp                            shift and go to state 38

state 13

    (24) sstmt -> VAR . IDENTIFIER EQUAL exp optsemi

    IDENTIFIER      shift and go to state 39


state 14

    (38) exp -> LOGICAL_NOT . exp
    (32) exp -> . IDENTIFIER
    (33) exp -> . FLOAT
    (34) exp -> . INT
    (35) exp -> . STRING
    (36) exp -> . TRUE
    (37) exp -> . FALSE
    (38) exp -> . LOGICAL_NOT exp
    (39) exp -> . LPAREN exp RPAREN
    (40) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (41) exp -> . exp LOGICAL_OR exp
    (42) exp -> . exp LOGICAL_AND exp
    (43) exp -> . exp LOGICAL_EQUAL exp
    (44) exp -> . exp LOGICAL_DIFF exp
    (45) exp -> . exp LT exp
    (46) exp -> . exp GT exp
    (47) exp -> . exp LE exp
    (48) exp -> . exp GE exp
    (49) exp -> . exp PLUS exp
    (50) exp -> . exp MINUS exp
    (51) exp -> . exp TIMES exp
    (52) exp -> . exp DIVIDE exp
    (53) exp -> . exp POWER exp
    (54) exp -> . exp MOD exp
    (55) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (60) exp -> . LBRACKET optargs RBRACKET
    (61) exp -> . IDENTIFIER LBRACKET exp RBRACKET
    (62) exp -> . LBRACKET optargs RBRACKET LBRACKET exp RBRACKET

    IDENTIFIER      shift and go to state 25
    FLOAT           shift and go to state 18
    INT             shift and go to state 17
    STRING          shift and go to state 9
    TRUE            shift and go to state 5
    FALSE           shift and go to state 16
    LOGICAL_NOT     shift and go to state 14
    LPAREN          shift and go to state 12
    FUNCTION        shift and go to state 26
    LBRACKET        shift and go to state 3

    exp                            shift and go to state 40

state 15

    (18) sstmt -> IF . exp stmt_or_compound optsemi
    (21) sstmt -> IF . exp compoundstmt ELSE stmt_or_compound optsemi
    (32) exp -> . IDENTIFIER
    (33) exp -> . FLOAT
    (34) exp -> . INT
    (35) exp -> . STRING
    (36) exp -> . TRUE
    (37) exp -> . FALSE
    (38) exp -> . LOGICAL_NOT exp
    (39) exp -> . LPAREN exp RPAREN
    (40) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (41) exp -> . exp LOGICAL_OR exp
    (42) exp -> . exp LOGICAL_AND exp
    (43) exp -> . exp LOGICAL_EQUAL exp
    (44) exp -> . exp LOGICAL_DIFF exp
    (45) exp -> . exp LT exp
    (46) exp -> . exp GT exp
    (47) exp -> . exp LE exp
    (48) exp -> . exp GE exp
    (49) exp -> . exp PLUS exp
    (50) exp -> . exp MINUS exp
    (51) exp -> . exp TIMES exp
    (52) exp -> . exp DIVIDE exp
    (53) exp -> . exp POWER exp
    (54) exp -> . exp MOD exp
    (55) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (60) exp -> . LBRACKET optargs RBRACKET
    (61) exp -> . IDENTIFIER LBRACKET exp RBRACKET
    (62) exp -> . LBRACKET optargs RBRACKET LBRACKET exp RBRACKET

    IDENTIFIER      shift and go to state 25
    FLOAT           shift and go to state 18
    INT             shift and go to state 17
    STRING          shift and go to state 9
    TRUE            shift and go to state 5
    FALSE           shift and go to state 16
    LOGICAL_NOT     shift and go to state 14
    LPAREN          shift and go to state 12
    FUNCTION        shift and go to state 26
    LBRACKET        shift and go to state 3

    exp                            shift and go to state 41

state 16

    (37) exp -> FALSE .

    LOGICAL_OR      reduce using rule 37 (exp -> FALSE .)
    LOGICAL_AND     reduce using rule 37 (exp -> FALSE .)
    LOGICAL_EQUAL   reduce using rule 37 (exp -> FALSE .)
    LOGICAL_DIFF    reduce using rule 37 (exp -> FALSE .)
    LT              reduce using rule 37 (exp -> FALSE .)
    GT              reduce using rule 37 (exp -> FALSE .)
    LE              reduce using rule 37 (exp -> FALSE .)
    GE              reduce using rule 37 (exp -> FALSE .)
    PLUS            reduce using rule 37 (exp -> FALSE .)
    MINUS           reduce using rule 37 (exp -> FALSE .)
    TIMES           reduce using rule 37 (exp -> FALSE .)
    DIVIDE          reduce using rule 37 (exp -> FALSE .)
    POWER           reduce using rule 37 (exp -> FALSE .)
    MOD             reduce using rule 37 (exp -> FALSE .)
    SEMICOLON       reduce using rule 37 (exp -> FALSE .)
    FUNCTION        reduce using rule 37 (exp -> FALSE .)
    BREAK           reduce using rule 37 (exp -> FALSE .)
    CONTINUE        reduce using rule 37 (exp -> FALSE .)
    IF              reduce using rule 37 (exp -> FALSE .)
    WHILE           reduce using rule 37 (exp -> FALSE .)
    DO              reduce using rule 37 (exp -> FALSE .)
    IDENTIFIER      reduce using rule 37 (exp -> FALSE .)
    RETURN          reduce using rule 37 (exp -> FALSE .)
    VAR             reduce using rule 37 (exp -> FALSE .)
    FOR             reduce using rule 37 (exp -> FALSE .)
    FLOAT           reduce using rule 37 (exp -> FALSE .)
    INT             reduce using rule 37 (exp -> FALSE .)
    STRING          reduce using rule 37 (exp -> FALSE .)
    TRUE            reduce using rule 37 (exp -> FALSE .)
    FALSE           reduce using rule 37 (exp -> FALSE .)
    LOGICAL_NOT     reduce using rule 37 (exp -> FALSE .)
    LPAREN          reduce using rule 37 (exp -> FALSE .)
    LBRACKET        reduce using rule 37 (exp -> FALSE .)
    $end            reduce using rule 37 (exp -> FALSE .)
    RBRACE          reduce using rule 37 (exp -> FALSE .)
    RPAREN          reduce using rule 37 (exp -> FALSE .)
    COMMA           reduce using rule 37 (exp -> FALSE .)
    RBRACKET        reduce using rule 37 (exp -> FALSE .)
    LBRACE          reduce using rule 37 (exp -> FALSE .)


state 17

    (34) exp -> INT .
